style: Fix alignment issue in SummaryContentBox module scss file

--- a/src/components/user_content/summary_content_box/SummaryContentBox.module.scss
+++ b/src/components/user_content/summary_content_box/SummaryContentBox.module.scss
@@ -63,3 +63,7 @@
 	transform: scaleX(-1);
 	display: inline-block;
 }
+
+.readMoreClass {
+	bottom: -2px !important;
+}
